fix image gap with display block

--- a/styles/profilePhoto.module.scss
+++ b/styles/profilePhoto.module.scss
@@ -1,11 +1,12 @@
 .container {
-  // border: 1px solid red;
   width: 100%;
-  height: min-content;
+  // height: min-content;
   border: 0.25rem solid var(--secondary);
 }
 
 .img {
+ 
+ display: block;
   width: 100%;
   height: auto;
   aspect-ratio: 1 / 1;
